--- a/platformio.ini
+++ b/platformio.ini
@@ -29,4 +29,6 @@ lib_deps=
     greiman/SSD1306Ascii@^1.3.5
     https://github.com/ChrisVeigl/LoadcellSensor
     https://github.com/benjaminaigner/NAU7802-DualChannel
-    
+
+; specify your desired port to speed up the upload process
+; upload_port=COM12
