added optional debug settings

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,4 +31,10 @@ lib_deps=
     https://github.com/benjaminaigner/NAU7802-DualChannel
 
 ; specify your desired port to speed up the upload process
-; upload_port=COM12
+upload_port=COM13
+
+; if you want to use the debug tool, uncomment the following lines 
+;debug_tool = cmsis-dap
+;upload_protocol = cmsis-dap
+;debug_speed = 30000
+;build_type = debug
