--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,8 @@ lib_deps=
     https://github.com/benjaminaigner/NAU7802-DualChannel
 
 ; specify your desired port to speed up the upload process
-upload_port=COM13
+;upload_port=COM13
+;upload_port=/dev/ttyACM0
 
 ; if you want to use the debug tool, uncomment the following lines 
 ;debug_tool = cmsis-dap
