--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = pico               ; for Raspberry Pi Pico W (FABI3)
+;default_envs = nano2040connect  ; for FlipMouse3
+
 [env:pico]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipico2w
@@ -18,6 +22,7 @@ board_build.core = earlephilhower
 build_flags = 
 ;    -I"C:/Users/veigl/.platformio/packages/framework-arduinopico/pico-sdk/lib/btstack/src"
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
+    -DFABI
 
 ; configure a 1 MB file system
 board_build.filesystem_size = 1m
@@ -29,6 +34,27 @@ lib_deps=
     greiman/SSD1306Ascii@^1.3.5
     https://github.com/ChrisVeigl/LoadcellSensor
     https://github.com/benjaminaigner/NAU7802-DualChannel
+
+
+
+[env:nano2040connect]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = nanorp2040connect
+framework = arduino
+board_build.core = earlephilhower
+build_flags = 
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
+    -DFLIPMOUSE
+
+board_build.filesystem_size = 1m
+lib_deps=
+    adafruit/Adafruit BusIO@^1.14.0
+    adafruit/Adafruit NeoPixel@^1.11.0
+    greiman/SSD1306Ascii@^1.3.5
+    https://github.com/ChrisVeigl/LoadcellSensor
+    https://github.com/benjaminaigner/NAU7802-DualChannel
+
+
 
 ; specify your desired port to speed up the upload process
 ;upload_port=COM13
