improved build options and settings for Flipmouse target (added lib_ignore section to skip unsopported BLE libs)

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,12 +7,16 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+;
+; from terminal, run `pio run -e <TARGET> -t upload` to build and upload for the target environment, e.g.:
+; pio run -e FLIPMOUSE -t upload
 
 [platformio]
-default_envs = pico               ; for Raspberry Pi Pico W (FABI3)
-;default_envs = nano2040connect  ; for FlipMouse3
+;default_envs = FABI        ; for Raspberry Pi Pico W (FABI3)
+default_envs = FLIPMOUSE  ; for Arduino Nano 2040 Connect (FlipMouse3)
 
-[env:pico]
+
+[env:FABI]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipico2w
 framework = arduino
@@ -20,9 +24,9 @@ board_build.core = earlephilhower
 
 ; enable Bluetooth Stack for BTC and BLE
 build_flags = 
-;    -I"C:/Users/veigl/.platformio/packages/framework-arduinopico/pico-sdk/lib/btstack/src"
     -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
     -DFABI
+;    -DFABI_BLEJOYSTICK_ENABLED   ; uncomment to enable BLE Joystick
 
 ; configure a 1 MB file system
 board_build.filesystem_size = 1m
@@ -37,16 +41,17 @@ lib_deps=
 
 
 
-[env:nano2040connect]
-platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+[env:FLIPMOUSE]
+platform = raspberrypi
 board = nanorp2040connect
 framework = arduino
 board_build.core = earlephilhower
 build_flags = 
-    -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
     -DFLIPMOUSE
-
 board_build.filesystem_size = 1m
+
+lib_ignore = MouseBLE, KeyboardBLE, JoystickBLE, HID_Bluetooth
+
 lib_deps=
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
