improved build envoronment settings, added flag for RP2350 / low-power support

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,53 +12,62 @@
 ; pio run -e FLIPMOUSE -t upload
 
 [platformio]
-;default_envs = FABI        ; for Raspberry Pi Pico W (FABI3)
-default_envs = FLIPMOUSE  ; for Arduino Nano 2040 Connect (FlipMouse3)
+default_envs = FABI_RP2350      ; for Raspberry Pi Pico 2W (FABI3 with low power / battery support)
 
-
-[env:FABI]
+[env:FABI_RP2350]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipico2w
 framework = arduino
 board_build.core = earlephilhower
-
-; enable Bluetooth Stack for BTC and BLE
-build_flags = 
-    -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
-    -DFABI
-;    -DFABI_BLEJOYSTICK_ENABLED   ; uncomment to enable BLE Joystick
-
-; configure a 1 MB file system
-board_build.filesystem_size = 1m
-
-; used libraries and dependencies
-lib_deps=
+lib_deps=  ; required libraries and dependencies
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
     greiman/SSD1306Ascii@^1.3.5
     https://github.com/ChrisVeigl/LoadcellSensor
     https://github.com/benjaminaigner/NAU7802-DualChannel
+build_flags = 
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH ; enable Bluetooth Stack for BTC and BLE
+    -DFABI    ; enable FABI features (FABI3)
+    -DRP2350  ; enable RP2350 features (low power / battery support )
+   ; -DFABI_BLEJOYSTICK_ENABLED   ; enable BLE Joystick
+board_build.filesystem_size = 1m ; configure a 1 MB file system
+extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the root of the project folder
 
 
+[env:FABI_RP2040]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = rpipicow
+framework = arduino
+board_build.core = earlephilhower
+lib_deps=  ; required libraries and dependencies
+    adafruit/Adafruit BusIO@^1.14.0
+    adafruit/Adafruit NeoPixel@^1.11.0
+    greiman/SSD1306Ascii@^1.3.5
+    https://github.com/ChrisVeigl/LoadcellSensor
+    https://github.com/benjaminaigner/NAU7802-DualChannel
+build_flags = 
+    -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH  ; enable Bluetooth Stack for BTC and BLE
+    -DFABI   ; enable FABI features (FABI3)
+   ; -DFABI_BLEJOYSTICK_ENABLED   ; enable BLE Joystick
+board_build.filesystem_size = 1m ; configure a 1 MB file system
+extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the root of the project folder
 
 [env:FLIPMOUSE]
 platform = raspberrypi
 board = nanorp2040connect
 framework = arduino
 board_build.core = earlephilhower
-build_flags = 
-    -DFLIPMOUSE
-board_build.filesystem_size = 1m
-
-lib_ignore = MouseBLE, KeyboardBLE, JoystickBLE, HID_Bluetooth
-
-lib_deps=
+lib_deps=  ; required libraries and dependencies
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
     greiman/SSD1306Ascii@^1.3.5
     https://github.com/ChrisVeigl/LoadcellSensor
     https://github.com/benjaminaigner/NAU7802-DualChannel
-
+lib_ignore = MouseBLE, KeyboardBLE, JoystickBLE, HID_Bluetooth
+build_flags = 
+    -DFLIPMOUSE ; enable FLIPMOUSE features (FlipMouse3)
+board_build.filesystem_size = 1m ; configure a 1 MB file system
+extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the root of the project folder
 
 
 ; specify your desired port to speed up the upload process
