fixed pico core version to #4.7.1 due to problems with BLE Mouse clicks in recent version (TBD: needs investigation!)

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,9 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipico2w
 framework = arduino
 board_build.core = earlephilhower
+platform_packages = 
+    framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#4.7.1
+
 lib_deps=  ; required libraries and dependencies
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
@@ -39,6 +42,9 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = rpipicow
 framework = arduino
 board_build.core = earlephilhower
+platform_packages = 
+    framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#4.7.1
+
 lib_deps=  ; required libraries and dependencies
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
@@ -55,8 +61,11 @@ extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the r
 [env:FLIPMOUSE]
 platform = raspberrypi
 board = nanorp2040connect
-framework = arduino
+framework = arduino 
 board_build.core = earlephilhower
+platform_packages = 
+    framework-arduinopico@https://github.com/earlephilhower/arduino-pico.git#4.7.1
+
 lib_deps=  ; required libraries and dependencies
     adafruit/Adafruit BusIO@^1.14.0
     adafruit/Adafruit NeoPixel@^1.11.0
