--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@
 
 [platformio]
 default_envs = FABI_RP2350      ; for Raspberry Pi Pico 2W (FABI3 with low power / battery support)
+; specify your desired port to speed up the upload process
+;upload_port=COM13
+
 
 [env:FABI_RP2350]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -32,7 +35,8 @@ build_flags =
    ; -DFABI_BLEJOYSTICK_ENABLED   ; enable BLE Joystick
 board_build.filesystem_size = 1m ; configure a 1 MB file system
 extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the root of the project folder
-
+upload_port=/dev/ttyACM0
+monitor_speed= 115200
 
 [env:FABI_RP2040]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
@@ -69,10 +73,6 @@ build_flags =
 board_build.filesystem_size = 1m ; configure a 1 MB file system
 extra_scripts = post:scripts/copy_uf2.py  ; copy the generated UF2 file to the root of the project folder
 
-
-; specify your desired port to speed up the upload process
-;upload_port=COM13
-;upload_port=/dev/ttyACM0
 
 ; if you want to use the debug tool, uncomment the following lines 
 ;debug_tool = cmsis-dap
